<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.EditPasswordActivity">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin_top">
        <EditText
            android:id="@+id/edt_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/label_current_password_promt"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin_top">
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/label_password_promt"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/input_margin_top">

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_history_black_24dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/label_confirm_password_promt"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_update_password"
        style="@style/custom_button_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/edit_pass_button" />
</LinearLayout>